description of clusters and names initialized

--- a/Notebooks/Distributed_GPU.ipynb
+++ b/Notebooks/Distributed_GPU.ipynb
@@ -63,7 +63,20 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Import the ml client library\n",
+    "from azure.ai.ml import MLClient\n",
+    "\n",
+    "# Prepare the information needed to access it in the account\n",
+    "ml_client = MLClient(\n",
+    "    subscription_id=\"<SUBSCRIPTION_ID>\",\n",
+    "    resource_group_name=\"resource1\",\n",
+    "    workspace_name=\"workspace1\",\n",
+    "    credential=credential,\n",
+    ")\n",
+    "cpu_cluster = None\n",
+    "gpu_cluster = None"
+   ]
   },
   {
    "cell_type": "markdown",
