aml compute cluster created

--- a/Notebooks/Distributed_GPU.ipynb
+++ b/Notebooks/Distributed_GPU.ipynb
@@ -90,12 +90,19 @@
     "## Creation of Clusters\n",
     "There are two types of clusters on Azure that are required for this project. This includes CPU and GPU cluster. \n",
     "\n",
-    "1. CPU: Consists of VMs to handle computing tasks such as running applications, handling web applications, and performing data processing. Don't rely on parallel processing. \n",
+    "1. **CPU**: Consists of VMs to handle computing tasks such as running applications, handling web applications, and performing data processing. Don't rely on parallel processing. \n",
     "\n",
-    "2. GPU: Consists of VMs for parallel processing and for heavy computation work such as ML, scientific simulations, video rendering, etc. Azure uses the NVIDIA Tesla series as a VM to perform deep learning tasks. VMs are software-emulation of physical computers that run on their own OS(guest OS) and runs independently of other VMs in the same host machine. The diagram below represents a view of NVIDIA Tesla GPU's architecture diagram. \n",
+    "2. **GPU**: Consists of VMs for parallel processing and for heavy computation work such as ML, scientific simulations, video rendering, etc. Azure uses the NVIDIA Tesla series as a VM to perform deep learning tasks. VMs are software-emulation of physical computers that run on their own OS(guest OS) and runs independently of other VMs in the same host machine. The diagram below represents a view of NVIDIA Tesla GPU's architecture diagram. \n",
     "\n",
     "![image.png](attachment:image.png)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -121,7 +128,39 @@
     "    cpu_cluster = ml_client.compute.get(cpu_compute_target)\n",
     "    print(f\"You already have a cluster of the same name which is {cpu_compute_target}\")\n",
     "\n",
-    "# We're not catching an error, but its an exception  \n"
+    "# We're not catching an error, but its an exception  \n",
+    "except Exception:\n",
+    "    print(\"Creating a new CPU compute target...\")\n",
+    "\n",
+    "    # Create an Azure ML Compute Object \n",
+    "    cpu_cluster = AmlCompute(\n",
+    "        # Name of cluster\n",
+    "        name = \"{cpu_compute_target}\",\n",
+    "\n",
+    "        # Describe the VM service \n",
+    "        type = \"amlcompute\",\n",
+    "\n",
+    "        # VM Family\n",
+    "        size = \"STANDARD_DS3_V2\",\n",
+    "\n",
+    "        # Min nodes \n",
+    "        min_instances = 0,\n",
+    "\n",
+    "        # Max nodes\n",
+    "        max_instances = 5,\n",
+    "\n",
+    "        #Time for node to run after job has been terminated\n",
+    "        idle_time_before_scale_down = 200,\n",
+    "\n",
+    "        # Define the cost tier - LowPriority or Dedicated. \n",
+    "        tier = \"Dedicated\",\n",
+    "    )\n",
+    "\n",
+    "    # Pass the object to the MLClient for creation and updation\n",
+    "    cpu_cluster_client = ml_client.begin_create_or_update(cpu_cluster)\n",
+    "\n",
+    "# print statement in the end to show the success of creation \n",
+    "print(f\"The compute with the name is {cpu_cluster_client.name} is made and the size is {cpu_cluster_client.size}\")"
    ]
   },
   {
