cluster ran and made

--- a/Notebooks/Distributed_GPU.ipynb
+++ b/Notebooks/Distributed_GPU.ipynb
@@ -99,10 +99,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating a new CPU compute target...\n",
+      "The compute with the name is project-cpu-cluster is made and the size is STANDARD_DS3_V2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import the cpu library from Azure\n",
+    "from azure.ai.ml.entities import AmlCompute\n",
+    "\n",
+    "cpu_compute_target = \"project-cpu-cluster\"\n",
+    "\n",
+    "# Determine if the compute target already exists and return a message for it\n",
+    "try:\n",
+    "    cpu_cluster = ml_client.compute.get(cpu_compute_target)\n",
+    "    print(f\"You already have a cluster of the same name which is {cpu_compute_target}\")\n",
+    "\n",
+    "# We're not catching an error, but its an exception  \n",
+    "except Exception:\n",
+    "    print(\"Creating a new CPU compute target...\")\n",
+    "\n",
+    "    # Create an Azure ML Compute Object \n",
+    "    cpu_cluster = AmlCompute(\n",
+    "        # Name of cluster\n",
+    "        name = \"{cpu_compute_target}\",\n",
+    "\n",
+    "        # Describe the VM service \n",
+    "        type = \"amlcompute\",\n",
+    "\n",
+    "        # VM Family\n",
+    "        size = \"STANDARD_DS3_V2\",\n",
+    "\n",
+    "        # Min nodes \n",
+    "        min_instances = 0,\n",
+    "\n",
+    "        # Max nodes\n",
+    "        max_instances = 5,\n",
+    "\n",
+    "        #Time for node to run after job has been terminated\n",
+    "        idle_time_before_scale_down = 200,\n",
+    "\n",
+    "        # Define the cost tier - LowPriority or Dedicated. \n",
+    "        tier = \"Dedicated\",\n",
+    "    )\n",
+    "\n",
+    "    # Pass the object to the MLClient for creation and updation\n",
+    "    cpu_cluster_client = ml_client.begin_create_or_update(cpu_cluster)\n",
+    "\n",
+    "# print statement in the end to show the success of creation \n",
+    "print(f\"The compute with the name is {cpu_cluster_client.name} is made and the size is {cpu_cluster_client.size}\")"
+   ]
   },
   {
    "cell_type": "code",
