--- a/Notebooks/Distributed_GPU.ipynb
+++ b/Notebooks/Distributed_GPU.ipynb
@@ -159,48 +159,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "Creating a new gpu compute target...\n",
+      "AML Compute with the name project-gpu-cluster and the size of STANDARD_NC6s_v3\n"
      ]
     }
    ],
    "source": [
+    "# Import the required libraries for AML compute\n",
     "from azure.ai.ml.entities import AmlCompute\n",
     "\n",
-    "gpu_compute_target = \"gpu-cluster\"\n",
+    "gpu_cluster_target = \"project-gpu-cluster\"\n",
     "\n",
+    "# check if the gpu cluster exists\n",
     "try:\n",
-    "    # let's see if the compute target already exists\n",
-    "    gpu_cluster = ml_client.compute.get(gpu_compute_target)\n",
-    "    print(\n",
-    "        f\"You already have a cluster named {gpu_compute_target}, we'll reuse it as is.\"\n",
-    "    )\n",
+    "    gpu_cluster = ml_client.compute.get(gpu_cluster_target)\n",
+    "    print(f\"Theres a gpu clusterwith a name {gpu_cluster_target} that already exists\")\n",
     "\n",
+    "\n",
+    "# compute using gpu compute cluster by making one\n",
     "except Exception:\n",
     "    print(\"Creating a new gpu compute target...\")\n",
     "\n",
     "    gpu_cluster = AmlCompute(\n",
-    "        name=\"gpu-cluster\",\n",
-    "        type=\"amlcompute\",\n",
-    "        size=\"STANDARD_NC6s_v3\",  # 1 x NVIDIA Tesla V100\n",
-    "        min_instances=0,\n",
-    "        max_instances=4,\n",
-    "        idle_time_before_scale_down=180,\n",
-    "        tier=\"Dedicated\",\n",
+    "        # Name of cluster\n",
+    "        name = \"project-gpu-cluster\", \n",
+    "\n",
+    "        # Describe the VM service \n",
+    "        type = \"amlcompute\",\n",
+    "\n",
+    "        # VM Family\n",
+    "        size = \"STANDARD_NC6s_v3\",\n",
+    "\n",
+    "        # Min number of nodes\n",
+    "        min_instances = 0,\n",
+    "\n",
+    "        # Max number of nodes\n",
+    "        max_instances = 5,\n",
+    "\n",
+    "        #Time for node to run after job has been terminated\n",
+    "        idle_time_before_scale_down = 200,\n",
+    "\n",
+    "        # Define the cost tier\n",
+    "        tier = \"Dedicated\",\n",
+    "\n",
     "    )\n",
     "\n",
-    "    gpu_cluster = ml_client.begin_create_or_update(gpu_cluster)\n",
+    "    # pass the object to the ml client\n",
+    "    gpu_cluster_client = ml_client.begin_create_or_update(gpu_cluster)\n",
     "\n",
-    "print(\n",
-    "    f\"AMLCompute with name {gpu_cluster.name} is created, the compute size is {gpu_cluster.size}\"\n",
-    ")"
+    "print(f\"AML Compute with the name {gpu_cluster_client.name} and the size of {gpu_cluster_client.size} \")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
