--- a/Notebooks/Distributed_GPU.ipynb
+++ b/Notebooks/Distributed_GPU.ipynb
@@ -218,15 +218,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Unzipping Image Archives \n",
+    "To train the machine learning classifier, it is crucial to take in the dataset from local and extract the zip archive before putting them in train and validation folder. \n",
+    "```\n",
+    "tar xvfm ${{inputs.archive}} --no-same-owner -C ${{outputs.images}}\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
   },
   {
