unzipping the archive file using the tar command

--- a/Notebooks/Distributed_GPU.ipynb
+++ b/Notebooks/Distributed_GPU.ipynb
@@ -223,10 +223,12 @@
    "source": [
     "## Unzipping Image Archives \n",
     "To train the machine learning classifier, it is crucial to take in the dataset from local and extract the zip archive before putting them in train and validation folder. \n",
+    "\n",
     "```\n",
     "tar xvfm ${{inputs.archive}} --no-same-owner -C ${{outputs.images}}\n",
+    "```\n",
     "\n",
-    "```"
+    "Parameters like the location of archive and output directory are injected into the command using the command. This is applied further in the code itself. "
    ]
   },
   {
