unzipping and tarring file logic defined + lambda expression added in python

--- a/Notebooks/Distributed_GPU.ipynb
+++ b/Notebooks/Distributed_GPU.ipynb
@@ -236,7 +236,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# import the required libraries\n",
+    "from azure.ai.ml import command \n",
+    "from azure.ai.ml import Input, Output\n",
+    "from azure.ai.ml.constants import AssetTypes \n",
+    "\n",
+    "# Command for unzipping the files in the directory\n",
+    "dataset_untar_command_jar = command(\n",
+    "    # Name for the UI (optional)\n",
+    "    display_name = \"untarring_command\",\n",
+    "\n",
+    "    # apply the command\n",
+    "    command = \"tar xvfm ${{inputs.archive}} --no-same-owner -C ${{outputs.images}}\",\n",
+    "\n",
+    "    # inputs\n",
+    "    inputs = {\n",
+    "        \"archive\": Input(\n",
+    "            type = AssetTypes.URI_FILE, \n",
+    "            path = \"https://drive.google.com/file/d/1BGnigrVXeQ-Oeh04wIyG0HcEH4_f_kgf/view?usp=sharing\"\n",
+    "        )\n",
+    "    },\n",
+    "\n",
+    "    # outputs \n",
+    "    outputs = {\n",
+    "        \"images\": Output(\n",
+    "            type = AssetTypes.URI_FOLDER,\n",
+    "            mode = \"upload\",\n",
+    "            path=\"azureml://datastores/workspaceblobstore/paths/datasets\",\n",
+    "\n",
+    "        ),\n",
+    "    },\n",
+    "\n",
+    "    # define the environment\n",
+    "    environment = \"AzureML-sklearn-1.0-ubuntu20.04-py38-cpu:1\",\n",
+    "\n",
+    "    # define the compute (Lambda Expression in Python)\n",
+    "    compute = (lambda client: \"project-cpu-cluster\" if client else None)(cpu_cluster_client)\n",
+    "    \n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
