lambda expression for finding the compute service

--- a/Notebooks/Distributed_GPU.ipynb
+++ b/Notebooks/Distributed_GPU.ipynb
@@ -272,7 +272,7 @@
     "    environment = \"AzureML-sklearn-1.0-ubuntu20.04-py38-cpu:1\",\n",
     "\n",
     "    # define the compute (Lambda Expression in Python)\n",
-    "    compute = (lambda client: \"project-cpu-cluster\" if client else None)(cpu_cluster_client)\n",
+    "    compute = lambda client: \"project-cpu-cluster\" if client else None\n",
     "    \n",
     ")"
    ]
