job success for cluster creation

--- a/Notebooks/Distributed_GPU.ipynb
+++ b/Notebooks/Distributed_GPU.ipynb
@@ -233,9 +233,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating command job for unzipping files...\n",
+      "Command job created successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "# import the required libraries\n",
     "from azure.ai.ml import command \n",
@@ -276,6 +285,13 @@
     "    \n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
