--- a/Notebooks/Distributed_GPU.ipynb
+++ b/Notebooks/Distributed_GPU.ipynb
@@ -291,7 +291,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# import the required libraries\n",
+    "import webbrowser\n",
+    "\n",
+    "# submit the required command object to the ml client\n",
+    "job_object = ml_client.create_or_update(dataset_untar_command_jar)\n",
+    "\n",
+    "# obtain the URL for job status to unzip the files\n",
+    "print(f\"Here is the URL for the live job.... {job_object.studio_url}\")\n",
+    "\n",
+    "# Open the browser with this URL \n",
+    "webbrowser.open(job_object.studio_url)\n",
+    "\n",
+    "#print the pipeline\n",
+    "print(f\"The pipeline details can be accessed through the job: {job_object.name}\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
