job running for unzipping files

--- a/Notebooks/Distributed_GPU.ipynb
+++ b/Notebooks/Distributed_GPU.ipynb
@@ -288,9 +288,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is the URL for the live job.... https://ml.azure.com/runs/modest_turtle_h5757766x3?wsid=/subscriptions/1442df46-ca82-4ac8-88ee-d46af11321d5/resourcegroups/resource1/providers/Microsoft.MachineLearningServices/workspaces/workplace1&tid=628e456a-64f2-4950-8f77-48f351de2de8\n",
+      "The pipeline details can be accessed through the job: untarring_command\n"
+     ]
+    }
+   ],
    "source": [
     "# import the required libraries\n",
     "import webbrowser\n",
@@ -308,6 +317,13 @@
     "print(f\"The pipeline details can be accessed through the job: {job_object.name}\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
