fixed the headings of all sections

--- a/Notebooks/Distributed_GPU.ipynb
+++ b/Notebooks/Distributed_GPU.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Distributed GPU Training Job for PyTorch Image Classification\n",
+    "# DISTRIBUTED GPU TRAINING JOB FOR FOOD DATA CLASSIFICATION \n",
     "\n",
     "The purpose of this notebook is to provide a technical documentation for a greater accelerated training process. This is done through a methodological approach known as distributed GPU training process. This involves a multi-node multi-gpu pytorch job, wherin MLFlow was used to analyze the metrics.  \n",
     "\n",
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Connection to AzureML Client\n",
+    "## CONNECTION TO AZUREML CLIENT 🔗\n",
     "\n",
     "An instance of the MLClient was created to connect to AzureML service. The use of `DefaultAzureCredential` is used to access the workspace and resource wherin the code is located in. This service principle policy allows the user to authenticate to access the client in a secured manner. "
    ]
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creation of Clusters\n",
+    "## CREATION OF CLUSTERS 🎯\n",
     "There are two types of clusters on Azure that are required for this project. This includes CPU and GPU cluster. \n",
     "\n",
     "1. **CPU**: Consists of VMs to handle computing tasks such as running applications, handling web applications, and performing data processing. Don't rely on parallel processing. \n",
@@ -221,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Unzipping Image Archives \n",
+    "## UNZIPPING IMAGE ARCHIVES 🖼️\n",
     "To train the machine learning classifier, it is crucial to take in the dataset from local and extract the zip archive before putting them in train and validation folder. \n",
     "\n",
     "```\n",
