--- a/Notebooks/Distributed_GPU.ipynb
+++ b/Notebooks/Distributed_GPU.ipynb
@@ -281,15 +281,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Here is the URL for the live job.... https://ml.azure.com/runs/modest_turtle_h5757766x3?wsid=/subscriptions/1442df46-ca82-4ac8-88ee-d46af11321d5/resourcegroups/resource1/providers/Microsoft.MachineLearningServices/workspaces/workplace1&tid=628e456a-64f2-4950-8f77-48f351de2de8\n",
-      "The pipeline details can be accessed through the job: untarring_command\n"
+      "Here is the URL for the live job.... \n",
+      "The pipeline details can be accessed through the job: food-classification\n"
      ]
     }
    ],
@@ -307,8 +307,7 @@
     "webbrowser.open(job_object.studio_url)\n",
     "\n",
     "#print the pipeline\n",
-    "print(f\"The pipeline details can be accessed through the job: {job_object.name}\")\n",
-    "\n"
+    "print(f\"The pipeline details can be accessed through the job: {job_object.name}\")\n"
    ]
   },
   {
@@ -320,15 +319,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
